--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
         "concurrently": "^9.0.1",
         "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^2.0.0",
+        "resolve-url-loader": "^5.0.0",
         "sass": "^1.56.1",
+        "sass-loader": "^12.6.0",
         "tailwindcss": "^4.0.0"
     }
 }
